src/main/java/com/example/rabam/error/CourierReadException.java
package com.example.rabam.error;

public class CourierReadException extends RuntimeException{
    public CourierReadException() {
        super("Courier didn't read!");
    }
}
